Some files were missed from adding

--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Train Simulator</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="static/style.css">
 </head>
 <body>
   <div id="loading">
@@ -24,6 +24,6 @@
     </div>
   </div>
 
-<script type="module" src="script.js"></script>
+<script type="module" src="static/script.js"></script>
 </body>
 </html>
