Added security package

--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Train Simulator</title>
+<title>Loco-Simulator</title>
+<link rel="icon" href="https://github.com/sankalp6115/dtbom-space/blob/main/Assets/icon.png?raw=true" type="image/x-icon">
 <link rel="stylesheet" href="static/style.css">
 </head>
 <body>
